Alpha 0.1.8.26
- Added method to get all available doors. Thanks, @Chojo, for the implementation.

Alpha 0.1.8.25
- Added support for version 1.16.2 of Minecraft.
- Added support for PlotSquared v5 (in addition to v3 and v4). Thanks, @xTronix, for the bug report!
- The update-checker will no longer read the hash of the file if it's not needed; it only reads it right before downloading the latest update now. Thanks, @SlimeDog, for the report! 
- Fixed fast doors (e.g. very small ones) getting toggled twice by the same button. Thanks, @Wolf2323, for the bug report!

Alpha 0.1.8.24
- Fixed powerblock cache not being invalidated when creating a new door (so you couldn't use it). The cache is now also invalidated when removing doors. Thanks, @PirateCraft, for the bug report!
- Exposed some methods to check which chunks a door might interact with when opening and if they are currently loaded or not.
- Added new config option "loadChunksForToggle" (default: true) that determines how the plugin handles unloaded chunks. When set to true, it will load any necessary chunks and move the blocks without animation. When set to false, it will abort the toggle attempt (and not load any chunks).
- Added new config option "skipUnloadedAutoCloseToggle" (default: true) that will prevent a door being toggled in unloaded chunks if it has an autoCloseTimer set, to avoid unnecessary chunk loading. Only takes effect if "loadChunksForToggle" is enabled.
- Added new config option "maxPowerBlockDistance" (default: -1 (unlimited)) that, as the name implies, limits the maximum distance between a powerblock and the door it belongs to (its engine, specifically). Thanks, @PirateCraft, for the suggestion!
- Added new config option "maxAutoCloseTimer" (default 6000 (=5 mins)) that determines the time limit for autoCloseTimers. 

Alpha 0.1.8.23
- Added full support for 1.16's new blocks so you no longer have to manually add them to the whitelist. Thanks, @thedarkonekiller, for the bug report!